WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273808
[RenderObject] logging to stderr by fprintf doesn't work on Windows Debug Console
https://bugs.webkit.org/show_bug.cgi?id=273808
Summary
[RenderObject] logging to stderr by fprintf doesn't work on Windows Debug Con...
Kohei Asano
Reported
2024-05-06 23:03:31 PDT
RenderingObject logging utils emit parts of info to stderr, as we see
https://github.com/WebKit/WebKit/blob/main/Source/WebCore/rendering/RenderObject.cpp#L2736-L2761
. This doesn't work well on Windows, and platform independent logging should have used WTFLogAlways instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Kohei Asano
Comment 1
2024-05-07 01:53:31 PDT
Here is permalink to the corresponding sources
https://github.com/WebKit/WebKit/blob/8d2e51d04796823702b47e48943d3dd735d67eae/Source/WebCore/rendering/RenderObject.cpp#L2736-L2761
.
Kohei Asano
Comment 2
2024-05-07 21:28:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28224
EWS
Comment 3
2024-05-08 15:15:54 PDT
Committed
278532@main
(63eb3f6b9a35): <
https://commits.webkit.org/278532@main
> Reviewed commits have been landed. Closing PR #28224 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-05-08 15:16:15 PDT
<
rdar://problem/127768950
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug