RenderObject: Use WTFLogAlways instead of stderr by fprintf for working on Windows https://bugs.webkit.org/show_bug.cgi?id=273808

Reviewed by Fujii Hironori.

Debug utilities for RenderObjects, WebCore::printXXXTree, used fprintf for
some of logs and WTFLogAlways for the rest. But stderr can't be seen on
debuggging Windows GUI apps. WTFLogAlways emits logs on Debug Console if it's
on the Windows GUI apps.

* Source/WebCore/rendering/RenderObject.cpp:

Canonical link: https://commits.webkit.org/278532@main